Ensure sidebar links have AA contrast with focus state

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -41,6 +41,7 @@
     }
 
     // Ensure AA colour contrast
+    a:focus,
     .help-block {
         color: color(text);
     }
